--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Finding Android</title>
+    <title>Finding Android App</title>
     <link rel="stylesheet" type="text/css" href="templates/style.css">
   </head>
-
   <body>
-    <p> this is the play template</p>
+
+      <img src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg">
+
   </body>
 </html>
