--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -12,8 +12,7 @@
     <p>Challenge: Your task is to find the Android icon among the midst of randomness. </p>
 
     <form action="/play" method="get" id="form1">
-      <button type="submit" value="Submit">Submit</button>
-
+      <button type="submit" value="Submit">Play</button>
     </form>
 
   </body>
