--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -11,7 +11,7 @@
 
     <p>Challenge: Your task is to find the Android icon among the midst of randomness. </p>
 
-    <form action="/leve1_1" method="get" id="form1">
+    <form action="/level_1" method="get" id="form1">
       <button type="submit" value="Submit">Submit</button>
 
     </form>
