fixed welcome html

--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <img src="new_android_logo.jpg">
+    <img src="images/new_android_logo.jpg">
     </br>
 
     <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness. </p> -->
