fixed play button

--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -11,11 +11,14 @@
 
     <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness. </p> -->
 
-    <form action="/play" method="get" id="form1">
-      <button type="submit" value="Submit">Play</button>
-    <form action="/leve1_1" method="get" id="form1">
+    <!-- <form action="/play" method="get" id="form1">
+      <button type="submit" value="Submit">Play</button> -->
+
+
+
+
     <form action="/level_1" method="get" id="form1">
-      <button type="submit" value="Submit">Submit</button>
+      <button type="submit" value="Submit">Play</button>
     </form>
 
   </body>
