--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -8,5 +8,8 @@
   <body>
     <h1>Level 1</h1>
       <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
+      <!-- <form>
+
+      </form> -->
   </body>
 </html>
