--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -14,12 +14,13 @@
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
 
-
-
-
     <form action="/level_1" method="get" id="form1">
-      <button type="submit" value="Submit">Play</button>
+      <button id="submit" type="submit" value="Submit">Play</button>
     </form>
+
+    <div class="button big-btn">This is a big button</div>
+    <div class="button medium-btn">This is a medium button</div>
+    <div class="button snall-btn">This is a small button</div>
 
   </body>
 </html>
