--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -9,7 +9,7 @@
     <img src="images/new_android_logo.jpg">
     </br>
 
-    <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness. </p> -->
+    <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness.v </p> -->
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
