--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -2,12 +2,19 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
 
   <body>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
+
     <h1>Level 1</h1>
+    
+    <div class="levels">
       <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
+    </div>
       <!-- <form>
 
       </form> -->
