--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
   <body>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
+    
     <h1>Level 2</h1>
+    <div class="levels">
       <img src="http://images.forwallpaper.com/files/images/e/edaa/edaaed01/884102/wallpaper-scenic-rain-wallpapers-rainyhongkong.jpg">
-
+    </div>
   </body>
 </html>
