--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
   <body>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
+    
     <h1>Level 5</h1>
+    <div class="levels">
       <img src="https://ehkstream.files.wordpress.com/2014/08/wheres-waldo.jpg">
+    </div>
   </body>
 </html>
