--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
 
   <body>
-    <img id="android_logo" src="images/new_android_logo.jpg">
-    </br>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
 
-    Challenge: Your task is to find the Android icon among the midst of randomness.
+    <p>Challenge: Your task is to find the Android icon among the midst of randomness.</p>
 
-    Rules: 
+    <p>Rules: For each level, click on a tile of the image where the android is located.</p>
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
