--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
 
   <body>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
+    
     <h1>Level 2</h1>
+    <div class="levels">
     <img src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
+    </div>
   </body>
 </html>
