--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <title>Finding Android App</title>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
   <body>
+    <div class="header">
+      <img src="images/new_android_logo.jpg">
+    </div>
+    
     <h1>Level 4</h1>
+    <div class="levels">
       <img src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg">
-
+    </div>
   </body>
 </html>
