--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -23,14 +23,13 @@
 =======
     Challenge: Your task is to find the Android icon among the midst of randomness.
 
-    Rules: 
+    Rules: Levels vary in difficulty.
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
 
     <form action="/level_1" method="get" id="form1">
       <button id="submit" type="submit" value="Submit">Play</button>
->>>>>>> 2500837025c898dcf6cfd3e54b70d1b343c314ef
     </form>
 
     <div class="button big-btn">This is a big button</div>
