--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -10,8 +10,8 @@
       <img src="images/new_android_logo.jpg">
     </div>
 
-    <h1>Level 1</h1>
-    
+    <h1>Scattered Madness</h1>
+
     <div class="levels">
       <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
     </div>
