--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -8,8 +8,8 @@
     <div class="header">
       <img src="images/new_android_logo.jpg">
     </div>
-    
-    <h1>Level 2</h1>
+
+    <h1>Misfit in Tokyo</h1>
     <div class="levels">
       <img src="http://images.forwallpaper.com/files/images/e/edaa/edaaed01/884102/wallpaper-scenic-rain-wallpapers-rainyhongkong.jpg">
     </div>
