--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -9,8 +9,8 @@
     <div class="header">
       <img src="images/new_android_logo.jpg">
     </div>
-    
-    <h1>Level 2</h1>
+
+    <h1>Lost in Toy World</h1>
     <div class="levels">
     <img src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
     </div>
