--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -8,8 +8,8 @@
     <div class="header">
       <img src="images/new_android_logo.jpg">
     </div>
-    
-    <h1>Level 5</h1>
+
+    <h1>Escaping Technology</h1>
     <div class="levels">
       <img src="https://ehkstream.files.wordpress.com/2014/08/wheres-waldo.jpg">
     </div>
