--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -10,20 +10,20 @@
       <img src="images/new_android_logo.jpg">
     </div>
 
-    <p>Challenge: Your task is to find the Android icon among the midst of randomness.</p>
-
-    <p>Rules: For each level, click on a tile of the image where the android is located.</p>
+    <p>Objective: Find the android figure within the picture to advance to the next level.</p>
+    <p></p>
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
+    <div id="play">
+      <form action="/level_1" method="get" id="form1">
+        <button id="submit" type="submit" value="Submit">Play</button>
+      </form>
+    </div>
 
-    <form action="/level_1" method="get" id="form1">
-      <button id="submit" type="submit" value="Submit">Play</button>
-    </form>
-
-    <div class="button big-btn">This is a big button</div>
+    <!-- <div class="button big-btn">This is a big button</div>
     <div class="button medium-btn">This is a medium button</div>
-    <div class="button snall-btn">This is a small button</div>
+    <div class="button snall-btn">This is a small button</div> -->
 
   </body>
 </html>
