--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -11,10 +11,12 @@
     </div>
 
     <h1>Level 1</h1>
-    
+
     <div class="levels">
-      <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
+      <img id="bg" src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
+      <img id="android" src="images/Android1.png">
     </div>
+
       <!-- <form>
 
       </form> -->
