--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -8,11 +8,10 @@
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
+      <h1>Level 1</h1>
     </div>
 
-    <h1>Level 1</h1>
-
-    <div class="levels">
+    <div class="bglevels">
       <img id="bg" src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
       <img id="android" src="images/Android1.png">
     </div>
