--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -15,6 +15,16 @@
     <div class="levels">
       <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
     </div>
+
+    <script>
+    $(document).ready(function(){
+        $('h1').click(function(){
+         $('h1').hide();
+       });
+    });
+
+    </script>
+
       <!-- <form>
 
       </form> -->
