--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -11,7 +11,7 @@
 
     <h1>Misfit in Tokyo</h1>
     <div class="levels">
-      <img src="http://images.forwallpaper.com/files/images/e/edaa/edaaed01/884102/wallpaper-scenic-rain-wallpapers-rainyhongkong.jpg">
+      <img src="http://read-jam.com/wp-content/uploads/2014/12/tokyo-by-night_00.jpg">
     </div>
   </body>
 </html>
