--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -1,3 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Orbitron:700);
+body {
+  font-family: 'Orbitron', sans-serif;
+  color: black;
+  background-color: #ffffff;
+}
+
+
+
 #android_logo{
   text-align: center;
 }
@@ -6,6 +15,7 @@
     width: 20em;
     height: 2em;
 }
+
 
 h1{
   text-align: center;
