--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -1,3 +1,10 @@
+.android {
+width: 50px;
+height:50px;
+position:fixed;
+
+}
+
 #android_logo{
   text-align: center;
 }
@@ -9,6 +16,7 @@
 
 h1{
   text-align: center;
+  font-style: "Orbitron", Arial, serif;
 }
 
 p{
