--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <title>Finding Android App</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="scripts/javascript.js"></script>
   </head>
 
   <body>
@@ -10,13 +14,66 @@
       <img src="images/new_android_logo.jpg">
     </div>
 
-    <h1>Level 1</h1>
-    
+    <h1>Scattered Madness</h1>
+
     <div class="levels">
       <img src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
     </div>
-      <!-- <form>
 
-      </form> -->
+    <img class = "android" src = "images/Android1.png" height = 10% width = 10% ></img>
+
+
+<form action="/level_2">
+<button class = "next_level_button" onclick=  >Next Level</button>
+</form>
+
+
+ <script>
+
+ $(document).ready(function(){
+   $(".next_level_button").hide()
+    $(".android").click(function(){
+      $(".android").height(200).width(200)
+     animateAndroid();
+     $(".next_level_button").fadeIn()
+
+    // window.location.href="level_2"
+});
+});
+
+
+ $(document).ready(function(){
+  //  $(".next_level_button").hide()
+     $(".android").click(function(){
+      $(".android").height(200).width(200)
+      animateAndroid();
+  //    $(".next_level_button").fadeIn()
+
+     window.location.href="level_2"
+});
+});
+
+function makeNewPosition(){
+
+    // Get viewport dimensions (remove the dimension of the div)
+    var h = $(window).height() - 50;
+    var w = $(window).width() - 50;
+
+    var nh = Math.floor(Math.random() * h);
+    var nw = Math.floor(Math.random() * w);
+
+    return [nh,nw];
+
+}
+
+function animateAndroid(){
+    var newq = makeNewPosition();
+    $(".android").animate({ top: newq[0], left: newq[1] }, function(){
+      animateAndroid();
+    });
+    };
+
+
+    </script>
   </body>
 </html>
