--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -3,15 +3,62 @@
   <head>
     <title>Finding Android App</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="scripts/javascript.js"></script>
   </head>
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
     </div>
-    
-    <h1>Level 4</h1>
+
+    <h1>Savior in Chaos</h1>
+
     <div class="levels">
-      <img src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg">
+      <img src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg" height = 50% width = 20%>
     </div>
+
+      <img class = "android" src = "images/Android1.png" height = 20% width = 20% ></img>
+
+      <form action="/level_5">
+      <button class = "next_level_button" onclick=  >Next Level</button>
+      </form>
+
+    <script>
+
+    $(document).ready(function(){
+      $(".next_level_button").hide()
+       $(".android").click(function(){
+         $(".android").height(200).width(200)
+        animateAndroid();
+        $(".next_level_button").fadeIn()
+
+       // window.location.href="level_2"
+   });
+   });
+
+   function makeNewPosition(){
+
+       // Get viewport dimensions (remove the dimension of the div)
+       var h = $(window).height() - 50;
+       var w = $(window).width() - 50;
+
+       var nh = Math.floor(Math.random() * h);
+       var nw = Math.floor(Math.random() * w);
+
+       return [nh,nw];
+
+   }
+
+   function animateAndroid(){
+       var newq = makeNewPosition();
+       $(".android").animate({ top: newq[0], left: newq[1] }, function(){
+         animateAndroid();
+       });
+       };
+
+
+
+     </script>
+
   </body>
 </html>
