--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -9,17 +9,13 @@
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
+      <h1>Level 3: Misfit in Tokyo</h1>
     </div>
-
-    <h1>Misfit in Tokyo</h1>
-<<<<<<< HEAD
 
     <div class="levels">
       <img src="http://images.forwallpaper.com/files/images/e/edaa/edaaed01/884102/wallpaper-scenic-rain-wallpapers-rainyhongkong.jpg" height = 50% width = 50%>
-=======
     <div class="levels">
       <img src="http://read-jam.com/wp-content/uploads/2014/12/tokyo-by-night_00.jpg">
->>>>>>> 5f8264b28baba3960f0c27178d6a9333071ce7e1
     </div>
 
       <img class = "android" src = "images/Android1.png" height = 20% width = 20% ></img>
@@ -60,14 +56,6 @@
          animateAndroid();
        });
        };
-
-
-
-
      </script>
-
-
-
-
   </body>
 </html>
