--- a/finding-android1/templates/level4.html
+++ b/finding-android1/templates/level4.html
@@ -9,13 +9,8 @@
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
+      <h1>Level 4: Savior in Chaos</h1>
     </div>
-
-    <h1>Savior in Chaos</h1>
-<<<<<<< HEAD
-
-=======
->>>>>>> 5f8264b28baba3960f0c27178d6a9333071ce7e1
     <div class="levels">
       <img src="http://blog.artandstory.com/wp-content/uploads/2011/06/spread01-washdc_crop.jpg" height = 50% width = 20%>
     </div>
@@ -49,7 +44,6 @@
        var nw = Math.floor(Math.random() * w);
 
        return [nh,nw];
-
    }
 
    function animateAndroid(){
@@ -58,10 +52,6 @@
          animateAndroid();
        });
        };
-
-
-
      </script>
-
   </body>
 </html>
