--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -9,9 +9,9 @@
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
+      <h1>Level 5: Escaping Technology</h1>
     </div>
 
-    <h1>Escaping Technology</h1>
     <div class="levels">
       <img src="https://ehkstream.files.wordpress.com/2014/08/wheres-waldo.jpg">
     </div>
@@ -21,7 +21,6 @@
       <form action="/final_page">
       <button class = "next_level_button" onclick=  >Next Level</button>
       </form>
-
 
     <script>
 
@@ -37,10 +36,6 @@
         //  $(document).load("level2.html")
     });
     });
-
-
-
      </script>
-
   </body>
 </html>
