--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -9,26 +9,17 @@
     <img id="android_logo" src="images/new_android_logo.jpg">
     </br>
 
-<<<<<<< HEAD
-
     <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness.v </p> -->
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
 
-
-
-
-    <form action="/level_1" method="get" id="form1">
-      <button type="submit" value="Submit">Play</button>
-
-    Challenge: Your task is to find the Android icon among the midst of randomness.
+    <p>Challenge: Your task is to find the Android icon among the midst of randomness.<br />
 
     Rules: Search for the hidden Android. Click the location you believe the Android is located. Levels vary in difficulty, more levels cleared = difficulty increases.
-=======
-    <p>Objective: Find the android figure within the picture to advance to the next level.</p>
-    <p></p>
->>>>>>> 1f318b56de110cd33e90b4b62f2d8de8eb9ec6bc
+    <br />
+    Objective: Find the android figure within the picture to advance to the next level.
+    </p>
 
     <!-- <form action="/play" method="get" id="form1">
       <button type="submit" value="Submit">Play</button> -->
