--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -10,13 +10,9 @@
   <body>
     <div class="header">
       <img src="images/new_android_logo.jpg">
+      <h1>Level 2: Lost in Toy World</h1>
     </div>
 
-    <h1>Lost in Toy World</h1>
-<<<<<<< HEAD
-
-=======
->>>>>>> 5f8264b28baba3960f0c27178d6a9333071ce7e1
     <div class="levels">
     <img src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
     </div>
