--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <title>Finding Android App</title>
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -15,24 +15,14 @@
       <h1>Level 1: Scattered Madness</h1>
     </div>
 
-    <script>
-    $(document).ready(function(){
-        $('h1').click(function(){
-         $('h1').hide();
-       });
-    });
-    </script>
-
     <div class="bglevels">
-      <img id="bg" src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
-      <img id="android" src="images/Android1.png">
+        <img id="android_level1" src="images/Android1.png">
     </div>
 
     <form>
     <form action="/level_2">
     <button class = "next_level_button" onclick=  >Next Level</button>
     </form>
-
  <script>
 
  $(document).ready(function(){
