--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -13,48 +13,47 @@
       <h1>Level 2: Lost in Toy World</h1>
     </div>
 
-    <div class="levels">
-    <img src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
+    <div class="bglevels">
+      <img id="bg"src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
+      <img id="android_level2" src = "images/Android1.png">
     </div>
 
-      <img class = "android" src = "images/Android1.png" height = 10% width = 10% ></img>
 
       <form action="/level_3">
       <button class = "next_level_button" onclick=  >Next Level</button>
       </form>
 
-<script>
-$(document).ready(function(){
-  $(".next_level_button").hide()
-   $(".android").click(function(){
-     $(".android").height(200).width(200)
-    animateAndroid();
-    $(".next_level_button").fadeIn()
+  <script>
+    $(document).ready(function(){
+      $(".next_level_button").hide()
+       $(".android").click(function(){
+         $(".android").height(200).width(200)
+        animateAndroid();
+        $(".next_level_button").fadeIn()
 
-   // window.location.href="level_2"
-});
-});
+       // window.location.href="level_2"
+    });
+    });
 
-function makeNewPosition(){
+    function makeNewPosition(){
 
-   // Get viewport dimensions (remove the dimension of the div)
-   var h = $(window).height() - 50;
-   var w = $(window).width() - 50;
+       // Get viewport dimensions (remove the dimension of the div)
+       var h = $(window).height() - 50;
+       var w = $(window).width() - 50;
 
-   var nh = Math.floor(Math.random() * h);
-   var nw = Math.floor(Math.random() * w);
+       var nh = Math.floor(Math.random() * h);
+       var nw = Math.floor(Math.random() * w);
 
-   return [nh,nw];
+       return [nh,nw];
 
-}
+    }
 
-function animateAndroid(){
-   var newq = makeNewPosition();
-   $(".android").animate({ top: newq[0], left: newq[1] }, function(){
-     animateAndroid();
-   });
-   };
-
-</script>
+    function animateAndroid(){
+       var newq = makeNewPosition();
+       $(".android").animate({ top: newq[0], left: newq[1] }, function(){
+         animateAndroid();
+       });
+     };
+   </script>
   </body>
 </html>
