--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -6,32 +6,22 @@
   </head>
 
   <body>
+
     <img id="android_logo" src="images/new_android_logo.jpg">
     </br>
+    <div id="intro">
+      <p>Challenge: Your task is to find the Android icon among the midst of randomness.<br />
 
-    <!-- <p>Challenge: Your task is to find the Android icon among the midst of randomness.v </p> -->
+      Rules: Search for the hidden Android. Click the location you believe the Android is located. Levels vary in difficulty, more levels cleared = difficulty increases.
+      <br />
+      Objective: Find the android figure within the picture to advance to the next level.
+      </p>
+    </div>
 
-    <!-- <form action="/play" method="get" id="form1">
-      <button type="submit" value="Submit">Play</button> -->
-
-    <p>Challenge: Your task is to find the Android icon among the midst of randomness.<br />
-
-    Rules: Search for the hidden Android. Click the location you believe the Android is located. Levels vary in difficulty, more levels cleared = difficulty increases.
-    <br />
-    Objective: Find the android figure within the picture to advance to the next level.
-    </p>
-
-    <!-- <form action="/play" method="get" id="form1">
-      <button type="submit" value="Submit">Play</button> -->
     <div id="play">
       <form action="/level_1" method="get" id="form1">
         <button id="submit" type="submit" value="Submit">Play</button>
       </form>
     </div>
-
-    <!-- <div class="button big-btn">This is a big button</div>
-    <div class="button medium-btn">This is a medium button</div>
-    <div class="button snall-btn">This is a small button</div> -->
-
   </body>
 </html>
