--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -11,26 +11,21 @@
 
   <body>
     <div class="header">
+      <a href ="http://localhost:11080/"> 
       <img src="images/new_android_logo.jpg">
+    </a>
+  </img>
       <h1>Level 1: Scattered Madness</h1>
     </div>
-
-    <script>
-    $(document).ready(function(){
-        $('h1').click(function(){
-         $('h1').hide();
-       });
-    });
-    </script>
 
     <div class="bglevels">
       <img id="bg" src="http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg">
       <img id="android" src="images/Android1.png">
     </div>
 
-    <form>
+
     <form action="/level_2">
-    <button class = "next_level_button" onclick=  >Next Level</button>
+    <button class = "next_level_button">Next Level</button>
     </form>
 
  <script>
