--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -1,21 +1,25 @@
 @import url(http://fonts.googleapis.com/css?family=Orbitron:700);
 body {
-  font-family: 'Orbitron', sans-serif;
-  color: black;
-  background-color: #ffffff;
+  font-family: 'Orbitron', Arial, sans-serif;
 }
 #android_logo{
   text-align: center;
+  z-index:1;
 }
 h1{
   text-align: center;
-  font-style: "Orbitron", Arial, serif;
+  font-family: "Orbitron", Arial, serif;
+}
+#welcomebody{
+  background-image: url("http://www.webdesignhot.com/wp-content/uploads/2012/12/Abstract-Green-Background-Wallpaper-Vector-Graphic.jpg");
 }
 #bg{
   /*margin: auto;*/
   position:absolute;
   z-index:0;
 }
+
+
 #android{
   width: 20px;
   height: 25px;
@@ -23,10 +27,12 @@ h1{
   top: 431px;
   left: 500px;
   z-index:1;
-}
+};
 p{
   text-align: center;
+  font-family: "Orbitron", Arial, sans-serif;
 }
+
 .bglevels{
   width: 50%;
   text-align: center;
