--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -9,25 +9,27 @@
 
   <body>
     <div class="header">
+      <a href ="http://localhost:11080/">
       <img src="images/new_android_logo.jpg">
+    </a>
       <h1>Level 2: Lost in Toy World</h1>
     </div>
 
-    <div class="levels">
-    <img src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
+    <div class="bglevels">
+      <img id="bg" src="https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg">
+      <img id="android" src="images/Android1.png">
     </div>
 
-      <img class = "android" src = "images/Android1.png" height = 10% width = 10% ></img>
 
       <form action="/level_3">
-      <button class = "next_level_button" onclick=  >Next Level</button>
+      <button class = "next_level_button">Next Level</button>
       </form>
 
 <script>
 $(document).ready(function(){
   $(".next_level_button").hide()
-   $(".android").click(function(){
-     $(".android").height(200).width(200)
+   $("#android").click(function(){
+     $("#android").height(200).width(200)
     animateAndroid();
     $(".next_level_button").fadeIn()
 
@@ -50,7 +52,7 @@ function makeNewPosition(){
 
 function animateAndroid(){
    var newq = makeNewPosition();
-   $(".android").animate({ top: newq[0], left: newq[1] }, function(){
+   $("#android").animate({ top: newq[0], left: newq[1] }, function(){
      animateAndroid();
    });
    };
