--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -8,34 +8,64 @@
   </head>
   <body>
     <div class="header">
+      <a href ="http://localhost:11080/">
       <img src="images/new_android_logo.jpg">
+    </a>
       <h1>Level 5: Escaping Technology</h1>
     </div>
 
-    <div class="levels">
-      <img src="https://ehkstream.files.wordpress.com/2014/08/wheres-waldo.jpg">
-    </div>
 
-      <img class = "android" src = "images/Android1.png" height = 20% width = 20% ></img>
 
-      <form action="/final_page">
+<div class="bglevels">
+  <img id="bg" src="http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg" height = 60% width = 60%></img>
+  <img id="android" src="images/Android1.png">
+</div>
+
+
+      <form action="/best_scores">
       <button class = "next_level_button" onclick=  >Next Level</button>
       </form>
 
-    <script>
+      <script>
 
-    $(document).ready(function(){
-    //$(".next_level_button").hide();
+      $(document).ready(function(){
+        $(".next_level_button").hide()
+         $("#android").click(function(){
+           $("#android").height(200).width(200)
+          animateAndroid();
+          $(".next_level_button").fadeIn()
 
-      $(".android").on("click",function(){
-        //  $(".next_level_button").hide();
-          $(".android").width(500).height(500);
-           //window.alert("Congratulations, you found Android! Please click on the Next Level button.")
-          //$(".next_level_button").fadeIn();
-          window.location.href="level_2"
-        //  $(document).load("level2.html")
-    });
-    });
-     </script>
-  </body>
-</html>
+         // window.location.href="level_2"
+     });
+     });
+     //  $(document).ready(function(){
+     //   //  $(".next_level_button").hide()
+     //      $("#android").click(function(){
+     //       $("#android").height(200).width(200)
+     //       animateAndroid();
+     //   //    $(".next_level_button").fadeIn()
+     //
+     //      window.location.href="level_2"
+     // });
+     // });
+     function makeNewPosition(){
+         // Get viewport dimensions (remove the dimension of the div)
+         var h = $(window).height() - 50;
+         var w = $(window).width() - 50;
+
+         var nh = Math.floor(Math.random() * h);
+         var nw = Math.floor(Math.random() * w);
+
+         return [nh,nw];
+     }
+     function animateAndroid(){
+         var newq = makeNewPosition();
+         $("#android").animate({ top: newq[0], left: newq[1] }, function(){
+           animateAndroid();
+         });
+         };
+
+
+         </script>
+       </body>
+     </html>
