--- a/finding-android1/templates/welcome.html
+++ b/finding-android1/templates/welcome.html
@@ -3,51 +3,17 @@
   <head>
     <title>Finding Android App</title>
     <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="templates/style.css">
-
-    <style>
-
-body {background-image: url("http://www.consalpi.it/images/white-abstract-background-with-green-lines.jpg.jpg");}
-h1   {color:red;
-    font-family: "Orbitron", Arial, serif;
-    text-align: center;}
-p    {color:black;
-    font-family: "Orbitron", Arial, serif;
-    text-align: center;}
-
-#play {
-  text-align:center;
-}
-
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head>
 
-    <body>
-        <img src="images/new_android_logo.jpg">
-      </a>
-    </img>
-
-
-    <h1> Challenge:</h1>
-
-    <p>Your task is to find the Android icon among the midst of randomness.</p>
-
-    <p>If you advance to the next levels, you have the option to return home by simply clicking on the "Finding Android" logo.</p>
-
-  <body>
-
-    <img id="android_logo" src="images/new_android_logo.jpg">
-    </br>
-    <div id="intro">
-      <p>Challenge: Your task is to find the Android icon among the midst of randomness.<br />
-
-      Rules: Search for the hidden Android. Click the location you believe the Android is located. Levels vary in difficulty, more levels cleared = difficulty increases.
-      <br />
-      Objective: Find the android figure within the picture to advance to the next level.
-      </p>
+  <body class="welcomebody">
+    <div>
+      <img id="android_logo" src="images/new_android_logo.jpg">
+      <h1> Challenge:</h1>
+      <p>Your task is to find the Android icon among the midst of randomness.</p>
+      <p>If you advance to the next levels, you have the option to return home by simply clicking on the "Finding Android" logo.</p>
+      </br>
     </div>
-
 
     <div id="play">
       <form action="/level_1" method="get" id="form1">
