--- a/finding-android1/templates/level1.html
+++ b/finding-android1/templates/level1.html
@@ -11,49 +11,20 @@
 
   <body>
     <div class="header">
-      <a href ="http://localhost:11080/">
+      <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
   </img>
       <h1>Level 1: Scattered Madness</h1>
     </div>
 
-    <div class="bglevels">
+    <div class="bglevel1">
         <img id="android_level1" src="images/Android1.png">
     </div>
-
 
     <form action="/level_2">
     <button class = "next_level_button">Next Level</button>
     </form>
- <script>
-
- $(document).ready(function(){
-   $(".next_level_button").hide()
-    $("#android").click(function(){
-      $("#android").height(200).width(200)
-     animateAndroid();
-     $(".next_level_button").fadeIn()
-});
-});
-
-function makeNewPosition(){
-    // Get viewport dimensions (remove the dimension of the div)
-    var h = $(window).height() - 50;
-    var w = $(window).width() - 50;
-
-    var nh = Math.floor(Math.random() * h);
-    var nw = Math.floor(Math.random() * w);
-
-    return [nh,nw];
-}
-function animateAndroid(){
-    var newq = makeNewPosition();
-    $("#android").animate({ top: newq[0], left: newq[1] }, function(){
-      animateAndroid();
-    });
-    };
-    </script>
 
 
   </body>
