--- a/finding-android1/templates/level2.html
+++ b/finding-android1/templates/level2.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="header">
-      <a href ="http://localhost:11080/">
+      <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
       <h1>Level 2: Lost in Toy World</h1>
