--- a/finding-android1/templates/level5.html
+++ b/finding-android1/templates/level5.html
@@ -8,20 +8,20 @@
   </head>
   <body>
     <div class="header">
-      <a href ="http://localhost:11080/">
+      <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
       <h1>Level 5: Escaping Technology</h1>
     </div>
 
-<div class="bglevels">
-  <img id="bg" src="http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg" height = 60% width = 60%></img>
-  <img id="android" src="images/Android1.png">
-</div>
+    <div class="bglevels">
+      <img id="bg" src="http://arzoenterprises.com/new-site/wp-content/uploads/2014/07/3356624308_53fdd5dde3_o.jpg" height = 60% width = 60%></img>
+      <img id="android" src="images/Android1.png">
+    </div>
 
-      <form action="/best_scores">
+    <form action="/best_scores">
       <button class = "next_level_button" onclick=  >Next Level</button>
-      </form>
+    </form>
 
       <script>
 
