--- a/finding-android1/templates/best_scores.html
+++ b/finding-android1/templates/best_scores.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="header">
-      <a href ="http://localhost:11080/">
+      <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
   </body>
