--- a/finding-android1/templates/level3.html
+++ b/finding-android1/templates/level3.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-      <a href ="http://localhost:11080/">
+      <a href ="/">
       <img src="images/new_android_logo.jpg">
     </a>
       <h1>Level 3: Misfit in Tokyo</h1>
