--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -52,6 +52,13 @@ p{
   background-image: url("https://c1.staticflickr.com/5/4153/5094259179_8590d66c59_b.jpg");
   background-repeat: no-repeat;
 }
+.bglevel3{
+  width: 50%;
+  height: 1000px;
+  margin: 0 auto;
+  background-image: url("http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg");
+  background-repeat: no-repeat;
+}
 .header{
   text-align: center;
 }
